# tank-game

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
assets/models/cartoon_tank/: license.txt  scene.gltf
assets/models/crates/: scene.gltf
scripts/: build_unix.sh  build_windows.ps1  install_dependencies_windows.bat
shaders/: shader.slang
src/: camera.cpp  camera.h  game.cpp  game.h  ground_tile_map.cpp  ground_tile_map.h  main.cpp
src/render/: swapchain_bundle.cpp  swapchain_bundle.h
src/scene/: bullet.cpp  bullet.h  crate.cpp  crate.h  tank.cpp  tank.h  tank_controller.cpp  tank_controller.h
